Spring security implemented without OAUTH2